.provarCaches/00D5f000005vwGkEAI/objects/rstk__pocontdtl__c.object
<CustomObject>
    <description>pocontdtl__c; BOC</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__pocontdtl_pocontainer__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  TEXT(rstk__pocontdtl_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__pocontdtl_pocontainer__r.Name &amp; &apos; (&apos; &amp; TEXT( rstk__pocontdtl_seq__c ) + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontdtl_maxf__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Maximum Shipping Temp (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontdtl_minf__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Minimum Shipping Temp (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontdtl_pickbatchno__c</fullName>
        <label>Picklist Batch Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontdtl_pocontainer__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Interim Shipment Container</label>
        <referenceTo>rstk__pocontainer__c</referenceTo>
        <relationshipLabel>Interim Container Contents</relationshipLabel>
        <relationshipName>pocontdtls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__pocontdtl_seq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontdtl_supreq__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supplier Requisition</label>
        <referenceTo>rstk__supreq__c</referenceTo>
        <relationshipLabel>Interim Container Contents</relationshipLabel>
        <relationshipName>pocontdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocontdtl_tempseq__c</fullName>
        <label>Selection Container Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Interim Container Content</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__Detail</fullName>
        <columns>NAME</columns>
        <columns>rstk__pocontdtl_pocontainer__c</columns>
        <columns>rstk__pocontdtl_pickbatchno__c</columns>
        <columns>rstk__pocontdtl_tempseq__c</columns>
        <columns>rstk__pocontdtl_seq__c</columns>
        <columns>rstk__pocontdtl_supreq__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Detail</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interim Container Contents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>